--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,9 +1,3 @@
 body {
-    background-color: #f0f0f0;
-}
-.container {
-    max-width: 1200px;
-    padding: 0 15px;
-    margin: 0 auto;
-    box-sizing: border-box;
+    color: #999;
 }
