--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,35 @@
 body {
     color: #999;
 }
-h1 {
-    
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
+    box-sizing: border-box;
 }
+.game-wrap {
+    padding: 30px;
+    background: #f0f0f0;
+    box-sizing: border-box;
+}
+.game-block {
+    display: flex;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+}
+.game-td {
+    border: 1px solid #888;
+    background: #fff4f4;
+    width: calc(25% - 4px);
+    height: 140px;
+    padding: 20px;
+    margin: 2px;
+    box-sizing: border-box;
+    position: relative;
+}
+.goblin {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+  }
