--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,5 +31,9 @@ body {
     position: absolute;
     left: 50%;
     top: 50%;
+    width: 120px;
+    height: 120px;
     transform: translate(-50%,-50%);
+    background-image: url('../img/goblin.png');
+    background: #fff;
   }
